--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:40179",
-      "sslPort": 44360
+      "applicationUrl": "http://localhost:5500",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -13,8 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7182;http://localhost:5182",
+      "launchUrl": "aqui_estoy",
+      "applicationUrl": "http://localhost:5500",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "aqui_estoy",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
